--- a/Pages/ChangePassword.cshtml
+++ b/Pages/ChangePassword.cshtml
@@ -75,6 +75,68 @@
 
 
                         <div class="col-lg-12 col-sm-12">
+                             @* User type  *@
+                            @* <div class="mb-4">
+                                <label class="my-1 me-2" for="UserGroupID">@Model.lblUserGroupName</label>
+                                <select class="form-select" id="UserGroupID" name="UserGroupID">
+                                @{
+                                    foreach (var item in Model.UserGroupsList)
+                                    {
+                                        var selectedAttr = item.UserGroupId == Model.UserGroupID ? "selected=\"selected\"" : "";
+                                        @:<option value="@item.UserGroupId" @Html.Raw(selectedAttr)>@item.UserGroupName</option>
+                                    }
+                                }
+                                </select>
+                            </div> *@
+                             <div class="mb-4">
+                                <label for="JobNumber">@Model.lblJobNumber</label>
+
+                                <input type="text" class="form-control" id="JobNumber" name="JobNumber"
+                                    value="@Model.JobNumber" />
+
+                            </div>
+
+                            <div class="mb-4">
+                                <label for="Username">@Model.lblUserName</label>
+
+                                <input type="text" class="form-control" id="Username" name="Username"
+                                    value="@Model.Username" />
+
+                            </div>
+                            <div class="mb-4">
+                                <label for="UserFullName">@Model.lblFullName</label>
+
+                                <input type="text" class="form-control" id="UserFullName" name="UserFullName"
+                                    value="@Model.UserFullName" />
+
+                            </div>
+
+                            @* Employee's Affiliation  *@
+                            <div class="mb-4">
+                                <label for="EmpAffiliation">@Model.lblEmpAffiliation</label>
+
+                                <input type="text" class="form-control" id="EmpAffiliation" name="EmpAffiliation"
+                                    value="@Model.EmpAffiliation" />
+
+                            </div>
+
+                            @* Transfer  *@
+                            <div class="mb-4">
+                                <label for="Transfer">@Model.lblTransfer</label>
+
+                                <input type="text" class="form-control" id="Transfer" name="Transfer"
+                                    value="@Model.Transfer" />
+
+                            </div>
+
+                            <div class="mb-4">
+                                <label for="Email">@Model.lblEmail</label>
+
+                                <input type="email" class="form-control" id="Email" name="Email" value="@Model.Email" />
+
+                            </div>
+
+
                             <div class="mb-4">
                                 <label for="Password">@Model.lblCurrentPassword</label>
                                 
