--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -188,7 +188,7 @@
               <span class="sidebar-icon">
                 <img class="icon icon-xs mx-1" src="images/password.png" />
               </span>
-              <span class="sidebar-text">@Model.lblChangePassword</span>
+              <span class="sidebar-text">@Model.lblUserProfile</span>
             </a>
           </li>
         }
