--- a/Pages/viewUser.cshtml
+++ b/Pages/viewUser.cshtml
@@ -74,6 +74,21 @@
                     <div class="col-sm-3 font-weight-bold">@Model.lblUserGroupName:</div>
                     <div class="col-sm-9">@Model.singleUser.GroupName</div>
                 </div>
+
+                <div class="row mb-3">
+                    <div class="col-sm-3 font-weight-bold">@Model.lblJobNumber:</div>
+                    <div class="col-sm-9">@Model.singleUser.JobNumber</div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col-sm-3 font-weight-bold">@Model.lblEmpAffiliation:</div>
+                    <div class="col-sm-9">@Model.singleUser.EmpAffiliation</div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col-sm-3 font-weight-bold">@Model.lblTransfer:</div>
+                    <div class="col-sm-9">@Model.singleUser.Transfer</div>
+                </div>
             </div>
         </div>
     </div>
