--- a/Pages/EditRoom.cshtml
+++ b/Pages/EditRoom.cshtml
@@ -57,7 +57,7 @@
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
-                            <a href="/ManageRooms" class="text-decoration-none">@Model.lblManageRooms</a>
+                            <a href="/ManageRooms?page=@Model.page" class="text-decoration-none">@Model.lblManageRooms</a>
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
