--- a/Pages/EditShelves.cshtml
+++ b/Pages/EditShelves.cshtml
@@ -61,7 +61,7 @@
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
-                            <a href="/ManageShelves" class="text-decoration-none">@Model.lblManageShelves</a>
+                            <a href="/ManageShelves?page=@Model.page" class="text-decoration-none">@Model.lblManageShelves</a>
                         </li>
                          <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
