--- a/Pages/ManageDestinations.cshtml
+++ b/Pages/ManageDestinations.cshtml
@@ -246,9 +246,7 @@
                                     <td>
                                         <form method="post">
                                             <input type="hidden" value="@item.DestinationId" name="DestinationId" />
-
-
-
+                                            <input type="hidden" value="@Model.CurrentPage" name="page" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                    asp-page-handler="Edit" />
                                             <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
