--- a/Pages/ManageStore.cshtml
+++ b/Pages/ManageStore.cshtml
@@ -273,6 +273,7 @@
                                                         <span>@Model.lblLock</span>
                                                     }
                                                 </button>
+                                                <input type="hidden" value="@Model.CurrentPage" name="page" />
                                                 <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                        asp-page-handler="Edit" />
                                                 <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
