--- a/Pages/ManageSupplier.cshtml
+++ b/Pages/ManageSupplier.cshtml
@@ -200,6 +200,7 @@
                         <td>@item.SupplierType</td>
                         <td>
                             <form method="post">
+                                <input type="hidden" value="@Model.CurrentPage" name="page" />
                                 <input type="hidden" value="@item.SupplierId" name="SupplierId" />
                                 <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" />
                                 <input type="submit" value="@Model.lblDelete" class="btn btn-danger" asp-page-handler="Delete" />
