--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -299,6 +299,9 @@
                                     <td>
                                         <form method="post">
                                             <input type="hidden" value="@item.ItemId" name="ItemId" />
+                                            <input type="hidden" value="@Model.CurrentPage" name="page" />
+                                            <input type="hidden" value="@Model.FromDate?.ToString("yyyy-MM-dd")" name="FromDate" />
+                                            <input type="hidden" value="@Model.ToDate?.ToString("yyyy-MM-dd")" name="ToDate" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" />
                                             <input type="submit" value="@Model.lblDelete" class="btn btn-danger" asp-page-handler="Delete" />
                                             <!--<input type="submit" value="@Model.lblDamage" class="btn btn-danger" asp-page-handler="Damage" formaction="DamageItem?ItemId=@item.ItemId" /> -->
