--- a/Pages/ManageRequestor.cshtml
+++ b/Pages/ManageRequestor.cshtml
@@ -173,9 +173,7 @@
                                     <td>
                                         <form method="post">
                                             <input type="hidden" value="@item.ReqId" name="ReqId" />
-
-
-
+                                            <input type="hidden" value="@Model.CurrentPage" name="page" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                    asp-page-handler="Edit" />
                                             <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
