--- a/Pages/ManageShelves.cshtml
+++ b/Pages/ManageShelves.cshtml
@@ -195,6 +195,7 @@
                                     <td>
                                         <form method="post">
                                             <input type="hidden" value="@shelf.ShelfId" name="ShelfId" />
+                                            <input type="hidden" value="@Model.CurrentPage" name="page" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                    asp-page-handler="Edit" />
                                             <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
