--- a/Pages/ManageStorage.cshtml
+++ b/Pages/ManageStorage.cshtml
@@ -255,7 +255,7 @@
                                             <input type="hidden" value="@item.StorageId" name="StorageId" />
 
 
-
+                                            <input type="hidden" value="@Model.CurrentPage" name="page" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                 asp-page-handler="Edit" />
                                             <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
