--- a/Pages/ChangePassword.cshtml
+++ b/Pages/ChangePassword.cshtml
@@ -69,16 +69,16 @@
         <div class="col-8 mb-4 m-auto">
             <div class="card border-0 shadow components-section">
                 <form method="post" class="card-body">
-                     <input type="hidden" name="ToUpdateUserID" value="@Model.ToUpdateUserID" />
-        <input type="hidden" name="Username" value="@Model.Username" />
+                    <input type="hidden" name="ToUpdateUserID" value="@Model.ToUpdateUserID" />
+                    <input type="hidden" name="Username" value="@Model.Username" />
                     <div class="row mb-4">
 
 
                         <div class="col-lg-12 col-sm-12">
                              @* User type  *@
-                            @* <div class="mb-4">
+                            <div class="mb-4">
                                 <label class="my-1 me-2" for="UserGroupID">@Model.lblUserGroupName</label>
-                                <select class="form-select" id="UserGroupID" name="UserGroupID">
+                                <select class="form-select" id="UserGroupID" name="UserGroupID" disabled>
                                 @{
                                     foreach (var item in Model.UserGroupsList)
                                     {
@@ -87,27 +87,27 @@
                                     }
                                 }
                                 </select>
-                            </div> *@
+                            </div>
                              <div class="mb-4">
                                 <label for="JobNumber">@Model.lblJobNumber</label>
 
                                 <input type="text" class="form-control" id="JobNumber" name="JobNumber"
-                                    value="@Model.JobNumber" />
+                                    value="@Model.JobNumber" @(!Model.IsADUser ? "" : "disabled") />
 
                             </div>
 
-                            <div class="mb-4">
+                            @* <div class="mb-4">
                                 <label for="Username">@Model.lblUserName</label>
 
                                 <input type="text" class="form-control" id="Username" name="Username"
-                                    value="@Model.Username" />
+                                    value="@Model.Username"  @(!Model.IsADUser ? "" : "disabled")/>
 
-                            </div>
+                            </div> *@
                             <div class="mb-4">
                                 <label for="UserFullName">@Model.lblFullName</label>
 
                                 <input type="text" class="form-control" id="UserFullName" name="UserFullName"
-                                    value="@Model.UserFullName" />
+                                    value="@Model.UserFullName"  @(!Model.IsADUser ? "" : "disabled")/>
 
                             </div>
 
@@ -116,7 +116,7 @@
                                 <label for="EmpAffiliation">@Model.lblEmpAffiliation</label>
 
                                 <input type="text" class="form-control" id="EmpAffiliation" name="EmpAffiliation"
-                                    value="@Model.EmpAffiliation" />
+                                    value="@Model.EmpAffiliation"  @(!Model.IsADUser ? "" : "disabled") />
 
                             </div>
 
@@ -125,14 +125,14 @@
                                 <label for="Transfer">@Model.lblTransfer</label>
 
                                 <input type="text" class="form-control" id="Transfer" name="Transfer"
-                                    value="@Model.Transfer" />
+                                    value="@Model.Transfer"   @(!Model.IsADUser ? "" : "disabled")/>
 
                             </div>
 
                             <div class="mb-4">
                                 <label for="Email">@Model.lblEmail</label>
 
-                                <input type="email" class="form-control" id="Email" name="Email" value="@Model.Email" />
+                                <input type="email" class="form-control" id="Email" name="Email" value="@Model.Email"  @(!Model.IsADUser ? "" : "disabled")/>
 
                             </div>
 
